--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <div class="hero__media" aria-label="Hero image placeholder">
           <div class="mediaFrame">
-            <img src="assets/spooder-man.jpg" alt="spooder-man" width="100%" height="100%" class="hero_media">
+            <img src="assets/spooder-man.jpg" alt="spooder-man" width="250px" height="250px">
           </div>
         </div>
       </div>
@@ -152,3 +152,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
