--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
           <p class="kicker">Raspberry Pi • Plugged-in desk device</p>
           <h1 class="headline">Mini TV</h1>
           <p class="subhead">
-            A rectangular mini player where most of the body is a speaker,
-            with a small <strong>2-inch TFT</strong> on the front.
-            Built for local files, simple controls, and always-ready playback.
-            Here's a hero render:
+            A rectangular mini player where most of the body is
+            a speaker,with a small <strong>2-inch TFT</strong>
+            on the front.
+            Built for local files, simple controls, and
+            always-ready playback. Here's a hero render:
           </p>
 
           <div class="ctaRow">
@@ -59,7 +60,7 @@
 
         <div class="hero__media" aria-label="Hero image placeholder">
           <div class="mediaFrame">
-            <img src="assets/spooder-man.jpg" alt="spooder-man" width="380px" height="380px">
+            <img src="assets/spooder-man.jpg" alt="spooder-man" width="300px" height="300px">
           </div>
         </div>
       </div>
@@ -152,3 +153,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
