Updated index.html, hardware.html
Removed unnecessary hyperlinks

--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
       <nav class="nav nav--desktop" aria-label="Primary">
         <a class="nav__link" href="">Home</a>
         <a class="nav__link" href="hardware.html">Hardware</a>
-        <a class="nav__link" href="about.html">About This Page</a>
-        <a class="nav__link" href="team.html">The Team</a>
       </nav>
 
       <button class="navToggle" type="button" aria-label="Open menu" aria-expanded="false">
@@ -32,8 +30,6 @@
       <nav class="nav nav--mobile" aria-label="Mobile">
         <a class="nav__link" href="">Home</a>
         <a class="nav__link" href="hardware.html">Hardware</a>
-        <a class="nav__link" href="about.html">About This Page</a>
-        <a class="nav__link" href="team.html">The Team</a>
       </nav>
     </div>
   </header>
@@ -45,16 +41,14 @@
           <p class="kicker">Raspberry Pi • Plugged-in desk device</p>
           <h1 class="headline">Mini TV</h1>
           <p class="subhead">
-            A rectangular mini player where most of the body is
-            a speaker,with a small <strong>2-inch TFT</strong>
-            on the front.
-            Built for local files, simple controls, and
-            always-ready playback. Here's a hero render:
+            A rectangular mini player where most of the body is a speaker,
+            with a small <strong>2-inch TFT</strong> on the front.
+            Built for local files, simple controls, and always-ready playback.
+            Here's a hero render:
           </p>
 
           <div class="ctaRow">
             <a class="btn" href="hardware.html">Hardware involved</a>
-            <a class="btn btn--ghost" href="about.html">About us</a>
           </div>
         </div>
 
@@ -142,7 +136,6 @@
 
         <div class="ctaRow">
           <a class="btn" href="hardware.html" aria-disabled="true">Hardware</a>
-          <a class="btn btn--ghost" href="team.html" aria-disabled="true">The Team</a>
         </div>
 
         <footer class="footer">© <span id="year"></span> Mini TV Project</footer>
@@ -153,5 +146,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
