Update hardware.html with new specifications and components

--- a/hardware.html
+++ b/hardware.html
@@ -139,35 +139,35 @@
         <div class="twoCol">
           <div class="specLine">
             <span class="specLine__k">Raspberry Pi</span>
-            <span class="specLine__v">Placeholder (model + RAM)</span>
+            <span class="specLine__v">Raspberry Pi 5 (8GB)</span>
           </div>
           <div class="specLine">
             <span class="specLine__k">Power</span>
-            <span class="specLine__v">USB 5V (adapter placeholder)</span>
+            <span class="specLine__v">27 Volt power adapter</span>
           </div>
           <div class="specLine">
             <span class="specLine__k">Display</span>
-            <span class="specLine__v">2&quot; TFT (resolution placeholder)</span>
+            <span class="specLine__v">2&quot; TFT (128x160)</span>
           </div>
           <div class="specLine">
             <span class="specLine__k">Interface</span>
-            <span class="specLine__v">SPI / parallel (placeholder)</span>
+            <span class="specLine__v">SPI</span>
           </div>
           <div class="specLine">
             <span class="specLine__k">Audio amp</span>
-            <span class="specLine__v">Placeholder (wattage, input type)</span>
+            <span class="specLine__v">MAX98357a</span>
           </div>
           <div class="specLine">
             <span class="specLine__k">Speaker</span>
-            <span class="specLine__v">Placeholder (size, impedance)</span>
+            <span class="specLine__v">2 Watts @ 0.5 Amperes</span>
           </div>
           <div class="specLine">
             <span class="specLine__k">Enclosure</span>
-            <span class="specLine__v">Placeholder (material, volume)</span>
+            <span class="specLine__v">Sustainable cardboard</span>
           </div>
           <div class="specLine">
             <span class="specLine__k">Controls</span>
-            <span class="specLine__v">Buttons / encoder (placeholder)</span>
+            <span class="specLine__v">Push buttons</span>
           </div>
         </div>
       </div>
@@ -184,42 +184,42 @@
         <div class="bomList" role="list">
           <div class="bomItem" role="listitem">
             <div class="bomItem__name">Raspberry Pi</div>
-            <div class="bomItem__meta">Qty: — • Placeholder: model/ram • Notes: —</div>
+            <div class="bomItem__meta">Placeholder: Raspberry Pi 5 (8GB)</div>
           </div>
 
           <div class="bomItem" role="listitem">
             <div class="bomItem__name">2&quot; TFT Display</div>
-            <div class="bomItem__meta">Qty: — • Placeholder: driver IC/interface • Notes: —</div>
+            <div class="bomItem__meta">128x160 Pixels @ SPI Interfacing</div>
           </div>
 
           <div class="bomItem" role="listitem">
             <div class="bomItem__name">Audio Amplifier</div>
-            <div class="bomItem__meta">Qty: — • Placeholder: wattage/input • Notes: —</div>
+            <div class="bomItem__meta">3.2 Watts @ 4Ω</div>
           </div>
 
           <div class="bomItem" role="listitem">
             <div class="bomItem__name">Speaker Driver</div>
-            <div class="bomItem__meta">Qty: — • Placeholder: size/impedance • Notes: —</div>
+            <div class="bomItem__meta">SPI Interfacing</div>
           </div>
 
           <div class="bomItem" role="listitem">
             <div class="bomItem__name">Storage</div>
-            <div class="bomItem__meta">Qty: — • Placeholder: microSD/USB • Notes: —</div>
+            <div class="bomItem__meta">8GB of available MicroSD space</div>
           </div>
 
           <div class="bomItem" role="listitem">
             <div class="bomItem__name">Controls</div>
-            <div class="bomItem__meta">Qty: — • Placeholder: buttons/encoder • Notes: —</div>
+            <div class="bomItem__meta">3 Push buttons (Pause, Play, Next)</div>
           </div>
 
           <div class="bomItem" role="listitem">
             <div class="bomItem__name">Power Adapter + Cable</div>
-            <div class="bomItem__meta">Qty: — • Placeholder: 5V rating/connector • Notes: —</div>
+            <div class="bomItem__meta">27 Volt power adapter</div>
           </div>
 
           <div class="bomItem" role="listitem">
             <div class="bomItem__name">Enclosure Hardware</div>
-            <div class="bomItem__meta">Qty: — • Placeholder: screws/inserts • Notes: —</div>
+            <div class="bomItem__meta">Sustainable cardboard coated with acrylic paint</div>
           </div>
         </div>
 
@@ -233,3 +233,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
