Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
       <div class="container">
         <h2 class="sectionTitle">Hardware direction</h2>
         <p class="sectionLead">
-          Built around a Raspberry Pi (model placeholder). Boot to a system ready when you are.
+          Built around a Raspberry Pi 5 (8GB). Boot to a system ready when you are.
           Output audio to teh built in amp + speaker.
         </p>
 
         <div class="twoCol">
           <div class="specLine"><span class="specLine__k">Compute</span><span class="specLine__v">Raspberry Pi 5</span></div>
-          <div class="specLine"><span class="specLine__k">Power</span><span class="specLine__v">USB 5V (plugged-in)</span></div>
+          <div class="specLine"><span class="specLine__k">Power</span><span class="specLine__v">27V (plugged-in)</span></div>
           <div class="specLine"><span class="specLine__k">Display</span><span class="specLine__v">2&quot; TFT </span></div>
           <div class="specLine"><span class="specLine__k">Storage</span><span class="specLine__v">16GB microSD</span></div>
         </div>
@@ -131,7 +131,7 @@
         <h2 class="sectionTitle">What’s next</h2>
         <p class="sectionLead">
           This is the home page—so the details live elsewhere.
-          Next up: the list of compenents, hardware, and the team.
+          Next up: the list of components and the hardware involved.
         </p>
 
         <div class="ctaRow">
@@ -146,3 +146,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
