Fix formatting issues in hardware.html

--- a/hardware.html
+++ b/hardware.html
@@ -110,7 +110,7 @@
             Document tradeoffs early so the build stays consistent. Keep it simple, serviceable, and repeatable.
           </p>
           <ul class="bullets">
-            <li>Power: 27V input with clean ncable management</li>
+            <li>Power: 27V input with clean cable management</li>
             <li>Thermals: equipped with a tiny but powerful CPU fan and heatsink to avoid any issues</li>
             <li>Storage: microSD (16GB)</li>
             <li>Controls: push buttons</li>
@@ -230,6 +230,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
