Revise project description and HTML structure
Updated the description of the Mini TV project and made minor adjustments to the HTML structure.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mini TV — Raspberry Pi MP4 Music Player</title>
-  <meta name="description" content="Mini TV: a Raspberry Pi-powered mini player with a 2-inch TFT and speaker-first body. Plug-in desk device." />
+  <meta name="description" content="Mini TV: a Raspberry Pi-powered mini player with a 2-inch TFT and compute-first body. Plug-in desk device." />
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -54,7 +54,7 @@
 
         <div class="hero__media" aria-label="Hero image placeholder">
           <div class="mediaFrame">
-            <img src="assets/spooder-man.jpg" alt="spooder-man" width="280px" height="280px">
+            
           </div>
         </div>
       </div>
@@ -146,4 +146,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
