Changed index.html, hardware.html
added images

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
           </div>
         </div>
 
-        <div class="hero__media" aria-label="Hero image placeholder">
+        <div class="hero__media">
           <div class="mediaFrame">
-            
+            <img class="heroImg" src="assets/thotadih.jpeg" alt="Image of the working project.">
           </div>
         </div>
       </div>
@@ -103,8 +103,7 @@
         </div>
 
         <div class="imagePlaceholder" aria-label="Design image placeholder">
-          <div class="imagePlaceholder__label">Design / Layout Image Placeholder</div>
-          <div class="imagePlaceholder__hint">Exploded view, faceplate sketch, or CAD render</div>
+          <img src="assets/screen.jpeg" alt="A working of the TFT screen">
         </div>
       </div>
     </section>
@@ -146,5 +145,4 @@
   <script src="script.js"></script>
 </body>
 </html>
-
 
