--- a/hardware.html
+++ b/hardware.html
@@ -101,9 +101,6 @@
       <div class="container split">
         <div>
           <h2 class="sectionTitle">Key decisions</h2>
-          <p class="sectionLead">
-            Document tradeoffs early so the build stays consistent. Keep it simple, serviceable, and repeatable.
-          </p>
           <ul class="bullets">
             <li>Power: 27V input with clean cable management</li>
             <li>Thermals: equipped with a tiny but powerful CPU fan and heatsink to avoid any issues</li>
@@ -168,11 +165,7 @@
     <!-- COMPONENTS / BOM (placeholder) -->
     <section id="components" class="band">
       <div class="container">
-        <h2 class="sectionTitle">Components (BOM placeholder)</h2>
-        <p class="sectionLead">
-          This is a placeholder list. Add part names, quantities, links, alternates, and notes when finalized.
-        </p>
-
+        <h2 class="sectionTitle">Components</h2>
         <div class="bomList" role="list">
           <div class="bomItem" role="listitem">
             <div class="bomItem__name">Raspberry Pi</div>
@@ -225,6 +218,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
